--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -75,6 +75,44 @@ body{
             }
         }
     }
+    & .dropdown {
+        position: relative;
+        font-size: 1rem;
+        width: 100%;
+        display: none;
+    
+        & .dropbtn {
+            background-color: #ffffff;
+            color: black;
+            width: 100%;
+            font-size: 1.5em;
+            font-family: "Alegreya-sans";
+            border-radius: 0.7em;
+            cursor: pointer;
+            border: none;
+        }
+
+        & .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f1f1f1;
+            margin-top: 0.3em;
+            width: 100%;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            border-radius: 0.7em;
+            z-index: 1;
+    
+            & a {
+                color: black;
+                font-size: 1.5em;
+                text-decoration: none;
+                display: block;
+            }
+        }
+
+        & .dropdown-content.show {display:block;}
+    }
 }
 
 .img-phrase{
@@ -109,7 +147,7 @@ body{
     left: 0;
     right: 0;
     z-index: 1;
-    font-size: 3em;
+    font-size: 2em;
     padding-top: 3.5em;
     padding-left: 1em;
     padding-right: 1em;
@@ -129,7 +167,7 @@ body{
     left: 0;
     right: 0;
     z-index: 1;
-    font-size: 3em;
+    font-size: 2em;
     margin-top: 1em;
     padding-top: 3.5em;
     padding-left: 1em;
@@ -149,7 +187,7 @@ body{
     left: 0;
     right: 0;
     z-index: 1;
-    font-size: 3em;
+    font-size: 2em;
     margin-top: 1em;
     padding-top: 3.5em;
     padding-left: 1em;
@@ -169,7 +207,7 @@ body{
     left: 0;
     right: 0;
     z-index: 1;
-    font-size: 3em;
+    font-size: 2em;
     margin-top: 1em;
     padding-top: 3.5em;
     padding-left: 1em;
@@ -280,26 +318,47 @@ body{
 
 @media(max-width:500px){
     .header{
+        gap: 1em;
         & h1{
             font-size: 200%;
         }
 
         & .nav{
-            justify-content: center;
-            text-align: center;
-    
-            & .myList{
-                flex-direction: column;
-                gap: 1%;
-            }
+            display: none;
         }
+
+        & .dropdown{
+            display: block;
+        }
+
+    }
+
+    #sobre{
+        font-size: 1.5em;
+    }
+
+    #conhecimentos{
+        font-size: 1.5em;
+    }
+
+    #projetos{
+        font-size: 1.5em;
+    }
+
+    #contato{
+        font-size: 1.5em;
+    }
+
+    .footer{
+        font-size: 1.5em;
     }
 }
 
 @media(max-width:400px){
     .header{
+        padding: 1em 3em;
         & h1{
-            font-size: 150%;
+            font-size: 180%;
         }
         & .nav{
             & .myList{
@@ -308,5 +367,34 @@ body{
                 }
             }
         }
+    }
+}
+
+@media(max-width:350px){
+    
+    #sobre{
+        font-size: 1em;
+    }
+
+    #conhecimentos{
+        font-size: 1em;
+    }
+
+    #projetos{
+        font-size: 1em;
+    }
+
+    #contato{
+        font-size: 1em;
+    }
+
+    .footer{
+        font-size: 1em;
+    }
+}
+
+@media(max-width:340px){
+    .header{
+        padding: 1em 3em;
     }
 }
